update: interchange the pages

--- a/cute.html
+++ b/cute.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="cute"></div>
-    <script type="module" src="/src/cuteNames.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
