--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <div id="cute"></div>
+  <script type="module" src="/src/cuteNames.ts"></script>
 </body>
 
 </html>
